--- a/webAppFinal/nginx/nginx.conf
+++ b/webAppFinal/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
         server app;
         server webAppFinal_app_1:5000;
         server webAppFinal_app_2:5000;
+        server webAppFinal_app_3:5000;
      }
 
 
