--- a/webAppFinal/.github/workflows/main.yml
+++ b/webAppFinal/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
         ECR_REPOSITORY: lesson-086
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
-        cd app
+        cd webAppFinal/app
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
