--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
     name: Build and Push to ECR
     steps:
     - name: Checkout
+      runs-on: ubuntu-latest
       uses: actions/checkout@v2
 
     - name: Configure AWS credentials
@@ -15,7 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: global
+        aws-region: eu-west-2
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -29,7 +30,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: lesson-086
+        ECR_REPOSITORY: myrepo
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
         cd webAppFinal/app
