--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ on:
 jobs:
   build-and-push:
     name: Build and Push to ECR
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      runs-on: ubuntu-latest
       uses: actions/checkout@v2
 
     - name: Configure AWS credentials
@@ -16,7 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-2
+        aws-region: global
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -30,9 +30,9 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: myrepo
+        ECR_REPOSITORY: lesson-086
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
-        cd webAppFinal/app
+        cd webAppFinal/app/
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
