--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: lesson-086
+        ECR_REPOSITORY: myrepo
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
         cd webAppFinal/app/
