--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -35,5 +35,6 @@ jobs:
         ECR_REPOSITORY: whist-ex
         IMAGE_TAG: latest
       run: |
+        cd webAppFinal/app/
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
